[package]
name = "melwallet"
version = "0.1.2"
edition = "2021"
license="ISC"
repository="https://github.com/mel-project/melwallet"
description="melwallet library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version="1.4.0", features=["serde"]}
melstructs = "0.3.2"
melvm = "0.1.0"
serde = {version="1.0.159", features=["derive"]}
serde_with = {version="1"}

stdcode = "0.1.14"
thiserror = "1.0.40"
tmelcrypt = "0.2.7"
